--- a/views/index.html
+++ b/views/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-  </body>
+	<meta charset="utf-8">
+	<!-- IE8/9及以后的版本都会以最高版本IE来渲染页面。 -->
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<title>银行业务系统</title>
+	<!--设置网页在浏览器tab选项卡上的图标-->
+	<link rel="shortcut icon" href="dist/logo.png" type="image/x-icon">
+
 </html>
