--- a/views/login.html
+++ b/views/login.html
@@ -11,11 +11,11 @@
   <!-- Bootstrap 3.3.6 -->
   <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
   <!-- Font Awesome -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css">
+  <!--   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css">-->  
   <!-- Ionicons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
   <!-- Theme style -->
-  <link rel="stylesheet" href="dist/css/AdminLTE.min.css">
+  <!-- <link rel="stylesheet" href="dist/css/AdminLTE.min.css"> -->
   <!-- iCheck -->
   <link rel="stylesheet" href="plugins/iCheck/square/blue.css">
 
@@ -26,9 +26,6 @@
   </style>
 
 </head>
-
-
-
 
 <body class="hold-transition login-page" style="background-color:#B4CFE9">
 <div style="position: absolute;top:40%;left:28%;margin-top:-65px;">
@@ -48,6 +45,11 @@
     </form>
   </div>
 </div>
+<!-- 测试向后台请求数据 -->
+<div>
+    <input id="testdata" class="btn btn-default" type="button" value="testdata">  
+    <input id="testbox" type="text" name="testbox" >
+</div>
 
 <!-- jQuery 2.2.3 -->
 <script src="plugins/jQuery/jquery-2.2.3.min.js"></script>
@@ -64,7 +66,7 @@
     $('input').iCheck({
       checkboxClass: 'icheckbox_square-blue',
       radioClass: 'iradio_square-blue',
-      increaseArea: '20%'
+      increaseArea: '20%' 
     });
   });
 </script>
